--- a/package.json
+++ b/package.json
@@ -3,18 +3,47 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo --experimental-https",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@popperjs/core": "^2.11.8",
+    "@reduxjs/toolkit": "^1.9.7",
+    "avvvatars-react": "^0.4.2",
+    "axios": "^1.7.7",
+    "clsx": "^2.1.0",
+    "cssnano": "^6.0.1",
+    "dayjs": "^1.11.13",
+    "formik": "^2.4.6",
+    "jquery": "^3.7.1",
+    "js-cookie": "^3.0.5",
+    "loader-utils": "^3.2.1",
+    "luxon": "^3.4.3",
+    "next": "14.1.3",
+    "next-images": "^1.8.5",
+    "path": "^0.12.7",
     "react": "^18",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18",
-    "next": "14.2.12"
+    "react-popper": "^2.3.0",
+    "react-redux": "^8.1.3",
+    "react-select": "^5.8.0",
+    "recharts": "^2.12.7",
+    "sharp": "^0.32.6",
+    "swiper": "^10.3.1",
+    "uuid": "^10.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "postcss-import": "^15.1.0",
+    "postcss-nesting": "^12.0.1",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.12",
+    "tailwindcss": "^3.3.0"
   }
 }
